# nba-anomaly-generator

./: README.md  dependencies-deploy.yaml  deploy.md  mkdocs.yml  setup.cfg  setup.py  structure.md
data/clean/: nba-clean-01.csv  nba-clean-02.csv  nba-synth-01-aggregate-sal.csv  nba-synth-01.csv
data/players/: 100.csv  1000.csv  1002.csv  100263.csv  1003.csv  1005.csv  1006.csv  1007.csv  1008.csv  101.csv  1010.csv  101106.csv  101107.csv  101108.csv  101109.csv  101110.csv  101111.csv  101112.csv  101113.csv  101114.csv  101115.csv  101117.csv  101118.csv  101119.csv  101120.csv  101121.csv  101122.csv  101123.csv  101124.csv  101125.csv  101126.csv  101127.csv  101128.csv  101129.csv  101130.csv  101131.csv  101132.csv  101133.csv  101134.csv  101135.csv  (+4442 more)
data/rosters/: LAL-1961.csv  LAL-1962.csv  LAL-1963.csv  LAL-1964.csv  LAL-1965.csv  LAL-1966.csv  LAL-1967.csv  LAL-1968.csv  LAL-1969.csv  LAL-1970.csv  LAL-1971.csv  LAL-1972.csv  LAL-1973.csv  LAL-1974.csv  LAL-1975.csv  LAL-1976.csv  LAL-1977.csv  LAL-1978.csv  LAL-1979.csv  LAL-1980.csv  LAL-1981.csv  LAL-1982.csv  LAL-1983.csv  LAL-1984.csv  LAL-1985.csv  LAL-1986.csv  LAL-1987.csv  LAL-1988.csv  LAL-1989.csv  LAL-1990.csv  LAL-1991.csv  LAL-1992.csv  LAL-1993.csv  LAL-1994.csv  LAL-1995.csv  LAL-1996.csv  LAL-1997.csv  LAL-1998.csv  LAL-1999.csv  LAL-2000.csv  (+18 more)
docs/: index.md
note/: template-nb.ipynb
note/datasets/: anom-datasets.ipynb  anomcontext_n01_a01_v01.csv  anomcontext_n01_a01_v02.csv  anomcontext_n01_a01_v03.csv  (+32 more)
scripts/: conda-setup.sh
tests/: test_skeleton.py  travis_setup.sh
(+21 files in other folders)
