# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = nba_anomaly_generator
description = Generate semi-artificial anomaly detection datasets, starting from NBA data.
author = Elia vw
author-email = elia.vw@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/eliavw
project-urls =
    Documentation = https://github.com/eliavw
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = src
install_requires = 
	numpy
	scipy
	pandas
	nba_api
python_requires = 
	>= 3.6

[options.packages.find]
where =
    src
exclude =
    tests

[options.extras_require]
testing =
    pytest

[test]
extras = True

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
testpaths = 
    tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
